--- a/Frontend/theme_3/table.html
+++ b/Frontend/theme_3/table.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Сайт, созданный Максимом Кормильцевым" />
     <meta http-equiv="Content-Type" content="text/html">
-    <base href="https://maksk89.github.io/Universitarium_courses/" target="_blank">
+    <base href="https://maksk89.github.io/Universitarium_courses/Frontend/theme_3" target="_blank">
     <title>Таблица зарегистрованных пользователей</title>
 </head>
 <body>
@@ -27,5 +27,6 @@
         </tr>
     </table>
 </table>
+<a href="registration.html">Форма регистрации</a>
 </body>
 </html>
